--- a/Part 6 - AppThemes/MonkeyFinder/MonkeyFinder.csproj
+++ b/Part 6 - AppThemes/MonkeyFinder/MonkeyFinder.csproj
@@ -40,4 +40,15 @@
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Adventures.Data\Adventures.Data.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Presenters\" />
+	  <None Remove="Commands\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Presenters\" />
+	  <Folder Include="Commands\" />
+	</ItemGroup>
 </Project>
