Plumbing up inventory [reuses monkey resources]

--- a/Part 7 - MVPVM/MonkeyFinder/MonkeyFinder.csproj
+++ b/Part 7 - MVPVM/MonkeyFinder/MonkeyFinder.csproj
@@ -52,4 +52,15 @@
 	  <Folder Include="Presenters\" />
 	  <Folder Include="Commands\" />
 	</ItemGroup>
+	<ItemGroup>
+	  <MauiXaml Condition=" '$(EnableDefaultXamlItems)' == 'true' " Update="View\MainPage %28copy%29.xaml">
+	    <SubType>Designer</SubType>
+	  </MauiXaml>
+	  <MauiXaml Condition=" '$(EnableDefaultXamlItems)' == 'true' " Update="View\Inventory.xaml">
+	    <SubType>Designer</SubType>
+	  </MauiXaml>
+	  <MauiXaml Condition=" '$(EnableDefaultXamlItems)' == 'true' " Update="View\InventoryPage.xaml">
+	    <SubType>Designer</SubType>
+	  </MauiXaml>
+	</ItemGroup>
 </Project>
