MVP-VM framework cleanup

--- a/Part 7 - MVPVM/Adventures.Common/Adventures.Common.csproj
+++ b/Part 7 - MVPVM/Adventures.Common/Adventures.Common.csproj
@@ -27,6 +27,7 @@
 	  <None Remove="ViewModel\" />
 	  <None Remove="Results\" />
 	  <None Remove="Entities\" />
+	  <None Remove="Controls\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Commands\" />
@@ -38,5 +39,6 @@
 	  <Folder Include="ViewModel\" />
 	  <Folder Include="Results\" />
 	  <Folder Include="Entities\" />
+	  <Folder Include="Controls\" />
 	</ItemGroup>
 </Project>
