Update triple store service

--- a/Part 7 - MVPVM/Adventures.Tests/Adventures.Tests.csproj
+++ b/Part 7 - MVPVM/Adventures.Tests/Adventures.Tests.csproj
@@ -18,11 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Adventures.Data\Adventures.Data.csproj" />
     <ProjectReference Include="..\Adventures.Inventory\Adventures.Inventory.csproj" />
     <ProjectReference Include="..\Adventures.Monkey\Adventures.Monkey.csproj" />
     <ProjectReference Include="..\Adventures.Caliburn.Light\Adventures.Caliburn.Light.csproj" />
     <ProjectReference Include="..\Adventures.Common\Adventures.Common.csproj" />
+    <ProjectReference Include="..\DataService\DataService.csproj" />
+    <ProjectReference Include="..\Adventures.Data\Adventures.Data.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Microsoft.Maui.Extensions" />
