--- a/Community Modules/XAML/Part 4 - Naming/Finish/MonkeyFinder/MonkeyFinder.csproj
+++ b/Community Modules/XAML/Part 4 - Naming/Finish/MonkeyFinder/MonkeyFinder.csproj
@@ -41,6 +41,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
+	</ItemGroup>
+	
+	<ItemGroup>
 	  <PackageReference Include="RapidXaml.CodeGen.Maui" Version="0.1.2">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
