--- a/Finish/MonkeyFinder/MonkeyFinder.csproj
+++ b/Finish/MonkeyFinder/MonkeyFinder.csproj
@@ -9,7 +9,7 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
-
+		
 		<!-- Display name -->
 		<ApplicationTitle>MonkeyFinder</ApplicationTitle>
 
@@ -38,5 +38,9 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
 	</ItemGroup>
 </Project>
