--- a/Part 3 - Navigation/MonkeyFinder/MonkeyFinder.csproj
+++ b/Part 3 - Navigation/MonkeyFinder/MonkeyFinder.csproj
@@ -39,4 +39,9 @@
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
+	</ItemGroup>
 </Project>
