--- a/Community Modules/XAML/Part 5 - Custom Types/Finish/MonkeyFinder/MonkeyFinder.csproj
+++ b/Community Modules/XAML/Part 5 - Custom Types/Finish/MonkeyFinder/MonkeyFinder.csproj
@@ -23,6 +23,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
