--- a/Finish/MonkeyFinder/MonkeyFinder.csproj
+++ b/Finish/MonkeyFinder/MonkeyFinder.csproj
@@ -43,6 +43,6 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Essentials" Version="$(MauiVersion)" />
 	</ItemGroup>
 </Project>
