--- a/Part 1 - Displaying Data/MonkeyFinder/MonkeyFinder.csproj
+++ b/Part 1 - Displaying Data/MonkeyFinder/MonkeyFinder.csproj
@@ -44,6 +44,6 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Essentials" Version="$(MauiVersion)" />
 	</ItemGroup>
 </Project>
